<resources>
    <string name="app_name">Almacen Kepler</string>
    <string name="buscar">Buscar</string>
    <string name="version_1_6">Version 1.12.8</string>
    <string name="versionNum">1.12.8</string>
    <string name="usuario">Usuario</string>
    <string name="escanear">Escanear</string>
    <string name="comprometidas">COMPROMETIDAS</string>
    <string name="ubicacion">UBICACION</string>
    <string name="existencia">EXISTENCIA</string>
    <string name="clave_escaneda">Clave Escaneda</string>
    <string name="producto">Producto</string>
    <string name="descripcion">Descripcion</string>
    <string name="linea">Linea</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="almacen">Almacen</string>
    <string name="folio">Folio</string>
    <string name="documento">Documento</string>
    <string name="cantidad">Cantidad</string>
    <string name="fecha">Fecha</string>
    <string name="tipo">Tipo</string>
    <string name="folios">Folios</string>
    <string name="via_de_embarque">Via de Embarque</string>
    <string name="anterior">Anterior</string>
    <string name="guardadatos">GuardaDatos</string>
    <string name="sincronizar_a_kepler">Sincronizar a Kepler</string>
    <string name="roda">RODA</string>
    <string name="tg">TG</string>
    <string name="ah">AH</string>
    <string name="modo_manual">Modo Manual</string>
    <string name="guardar">Guardar</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="fechaI">Fecha Inicio</string>
    <string name="horaI">Hora Inicio</string>
    <string name="termina">Cerrar Folio</string>
    <string name="terminar">Terminar</string>
    <string name="maximo">MÁXIMO</string>
    <string name="minimo">MÍNIMO</string>
    <string name="sucursales">SUCURSALES</string>
    <string name="clave">CLAVE</string>
    <string name="cant">CANT</string>
    <string name="surtido">SURTIDO</string>
    <string name="celda">Celda</string>
    <string name="surtir">Surtir</string>
    <string name="sugerido">Sugerido</string>
    <string name="stock">Bajar a Stock</string>
    <string name="cantCel">Cantidad Celda</string>
    <string name="rellenar">Rellenar Celda</string>
    <!-- https://vazlo.com.mx/assets/img/productos/chica/jpg/-->
    <string name="urlImagenesGeneral">https://www.jacve.mx/es-mx/img/products/xl/</string><!--URL genereal imagenes -->
    <string name="urlImagenesSPR">https://jacve.mx/es-mx/img/products/md/</string>
    <!--<string name="urlImagenesSPR">https://sprautomotive.com/es_MX/res/img/products/md/</string>--><!--URL SPR imagenes -->
    <string name="ext">/4.webp</string>
    <string name="rodatech">rodatech/</string>
    <string name="partech">partech/</string>
    <string name="shark">shark/</string>
    <!-- https://sprautomotive.com/es_MX/res/img/products/md/-->
    <string name="versionBaseDatos">4</string>

    <!-- NOMBRES WEB SERVICES -->
    <string name="resActualizaDif">resActualizaDif</string>
    <string name="resRecepConten">resRecepConten</string>
    <string name="resRecepXProd">resRecepXProd</string>
    <string name="resRecepFolios">resRecepFolios</string>
    <string name="resDetUbi">resDetUbi</string>
    <string name="resConsEnvTrasp">resConsEnvTrasp</string>
    <string name="resListInv">ListInv</string>
</resources>